[package]
name = "cocoball"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
clap = "2.33.0"
serde = {version="1.0.107", features=["derive"]}
chrono = {version="0.4.11", features=["serde"]}
timeago = "0.2.1"
env_logger = "0.7.1"
log = "0.4.8"
toml = "0.5.6"
serde_json = "1.0.52"
actix-web = "2.0.0"
actix-rt = "1.1.1"
askama = "0.9.0"

